Fix header logo alignment

--- a/src/_includes/header/styles.scss
+++ b/src/_includes/header/styles.scss
@@ -146,6 +146,10 @@
     display: none;
   }
 
+  .header__logo {
+    margin-left: .3rem;
+  }
+
   .header .burger {
     display: block;
     margin-left: auto;
